unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Additional_Markup__c.field-meta.xml
<CustomField>
    <fullName>Additional_Markup__c</fullName>
    <description>Quote line Group - give the ability to increase the price</description>
    <inlineHelpText>This field gives the ability to increase the price by a certain %.</inlineHelpText>
    <label>Additional Markup (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>