unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Code_Postal_Gp__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_Gp__c</fullName>
    <description>Code Postal pour la livraison.</description>
    <inlineHelpText>Merci de saisir le code postal de livraison de ce groupe. 
L&#39;adresse complète vous sera demandée lors du bouton &quot;Finaliser Devis&quot;</inlineHelpText>
    <label>Code Postal</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>