unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Coeff__c.field-meta.xml
<CustomField>
    <fullName>Coeff__c</fullName>
    <label>Coeff</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>