unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Compte_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Compte_de_livraison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte de livraison</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le compte sélectionné doit être de type Site</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Groupes de ligne de devis (Compte de livraison)</relationshipLabel>
    <relationshipName>Groupes_de_ligne_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>