unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Contact_logistique_sur_place__c.field-meta.xml
<CustomField>
    <fullName>Contact_logistique_sur_place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact logistique sur place</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Groupes de ligne de devis</relationshipLabel>
    <relationshipName>Groupes_de_ligne_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>