unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Duree_location__c.field-meta.xml
<CustomField>
    <fullName>Duree_location__c</fullName>
    <formula>(SBQQ__EndDate__c - SBQQ__StartDate__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée location (jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>