unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Duree_location_Month__c.field-meta.xml
<CustomField>
    <fullName>Duree_location_Month__c</fullName>
    <formula>CEILING((Duree_location__c/365)*12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée location (Mois)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>