unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Duree_location_Year__c.field-meta.xml
<CustomField>
    <fullName>Duree_location_Year__c</fullName>
    <formula>Duree_location_Month__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée location (Années)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>