unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Location_Duration__c.field-meta.xml
<CustomField>
    <fullName>Location_Duration__c</fullName>
    <label>Location Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_Duration</valueSetName>
    </valueSet>
</CustomField>