unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <formula>If(Duree_location__c &lt;15,&quot;CT&quot;,IF(Duree_location__c &lt; 365, &quot;CDM&quot;,&quot;LT&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Type</label>
    <type>Text</type>
</CustomField>