unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Montant_du_client__c.field-meta.xml
<CustomField>
    <fullName>Montant_du_client__c</fullName>
    <label>Montant du client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>