unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <formula>SBQQ__Quote__r.Opportunity_type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityType</label>
    <type>Text</type>
</CustomField>