unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Prom_season__c.field-meta.xml
<CustomField>
    <fullName>Prom_season__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prom. saisonnière</label>
    <type>Checkbox</type>
</CustomField>