unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/QLGAverageCustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>QLGAverageCustomerDiscount__c</fullName>
    <formula>IF( SBQQ__ListTotal__c =0,0,(Sum_of_Special_Price__c - Sum_Of_Net_Price__c)/Sum_of_Special_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>