unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Description__c</fullName>
    <description>Description for this group.</description>
    <inlineHelpText>Description de ce groupe.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>