unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Favorite__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Favorite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Favorite to which this Quote Line Group belongs.</description>
    <inlineHelpText>Favori auquel ce groupe de lignes de devis appartient.</inlineHelpText>
    <label>Favorite</label>
    <referenceTo>SBQQ__Favorite__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>QuoteLineGroups</relationshipName>
    <type>Lookup</type>
</CustomField>