unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__MarkupRate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__MarkupRate__c</fullName>
    <description>Default markup rate applied to line items in this group.</description>
    <inlineHelpText>Taux de marge par défaut appliqué aux éléments de ligne de ce groupe. Remplace le niveau de l&#39;élément de ligne.</inlineHelpText>
    <label>Markup (%)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>