unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Number__c</fullName>
    <description>Sort order of this group within its quote.</description>
    <inlineHelpText>Ordre de tri de ce groupe dans ce devis.</inlineHelpText>
    <label>Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>