unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__SeparateContract__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SeparateContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that forces a separate contract for this group.</description>
    <inlineHelpText>Sélectionnez cette case afin de générer un contrat séparé pour les abonnements de ce groupe.</inlineHelpText>
    <label>Separate Contract</label>
    <type>Checkbox</type>
</CustomField>