unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Source__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source of cloned quote line group.</description>
    <inlineHelpText>Source du groupe de lignes de devis cloné.</inlineHelpText>
    <label>Source</label>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Quote Line Groups</relationshipLabel>
    <relationshipName>Clones</relationshipName>
    <type>Lookup</type>
</CustomField>