unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__TargetCustomerAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetCustomerAmount__c</fullName>
    <description>Customer amount to be targeted in calculating additional discounts.</description>
    <inlineHelpText>Saisissez le montant souhaité par le client pour calculer automatiquement une remise supplémentaire sur les éléments de ligne qui peuvent faire l&#39;objet d&#39;une remise.</inlineHelpText>
    <label>Target Customer Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>