unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Short_Term_Group__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Group__c</fullName>
    <formula>Duree_location__c &lt; 32</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Term Group</label>
    <type>Checkbox</type>
</CustomField>