unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Sum_Of_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Net_Price__c</fullName>
    <label>Sum Of Net Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>