unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Sum_of_Special_Price__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Special_Price__c</fullName>
    <label>Sum of Special Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>