unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Tech_required_update__c.field-meta.xml
<CustomField>
    <fullName>Tech_required_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech required update</label>
    <type>Checkbox</type>
</CustomField>