unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <formula>IF(OR(
LEFT(Code_Postal_Gp__c,2) = &quot;01&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;02&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;03&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;07&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;09&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;11&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;26&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;27&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;28&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;30&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;31&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;33&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;39&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;44&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;45&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;51&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;54&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;56&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;57&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;60&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;67&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;69&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;71&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;75&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;77&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;78&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;81&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;82&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;84&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;85&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;91&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;92&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;93&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;94&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;95&quot;),
&quot;Zone A&quot;,
IF(OR(
LEFT(Code_Postal_Gp__c,2) = &quot;2A&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;2B&quot;,
LEFT(Code_Postal_Gp__c,2) = &quot;98&quot;),
&quot;Zone C&quot;,
&quot;Zone B&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>