unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/validationRules/Empty_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Date</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c , &quot;Quote&quot;),
								OR(
												ISBLANK(SBQQ__StartDate__c),
												ISBLANK(SBQQ__EndDate__c) 
												)
								),
				TRUE,
				IF(
								AND(
												OR(
																ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c , &quot;Amendment&quot;),
																ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c , &quot;Renewal&quot;)
																),
																OR(
																				ISBLANK(SBQQ__StartDate__c),
																				ISBLANK(SBQQ__EndDate__c) 
																)
												),
												TRUE,
												FALSE
												)
								)</errorConditionFormula>
    <errorMessage>You need to enter Start Date and End Date</errorMessage>
</ValidationRule>