unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/validationRules/No_Forfait_15_a_30_jours.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Forfait_15_a_30_jours</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Duree_location__c &gt; 14 , 
ISPICKVAL(SBQQ__Quote__r.Type_de_location__c,&#39;Courte Durée&#39;),
ISPICKVAL( SBQQ__Quote__r.Quote_Type__c,&#39;Devis Hors Standard&#39;))</errorConditionFormula>
    <errorMessage>Veuillez respecter les dates de forfait ou changer le type de location en &quot;Moyenne Durée&quot;.</errorMessage>
</ValidationRule>