unpackaged/main/default/objects/SBQQ__QuoteLineGroup__c/validationRules/Positive_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Duration</fullName>
    <active>true</active>
    <description>La durée de location doit être supérieure à 0 jours.</description>
    <errorConditionFormula>Duree_location__c &lt;=0</errorConditionFormula>
    <errorDisplayField>SBQQ__EndDate__c</errorDisplayField>
    <errorMessage>La durée de location doit être supérieure à 0.</errorMessage>
</ValidationRule>